# courier-service-modeling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Branch/: Branch.cpp  Branch.h
Courier/: Courier.cpp  Courier.h
Events/: Events.cpp  Events.h
Events/AbstacstEvent/: AbsractEvent.h  AbstractEvent.cpp
Events/LastEvent/: LastEvent.cpp  LastEvent.h
Events/LetterMovingEvent/: LetterMovingEvent.cpp  LetterMovingEvent.h
Events/OfficeVisitEvent/: OfficeVisitEvent.cpp  OfficeVisitEvent.h
Frontend/: App.cpp  App.h  SetTimeWindow.cpp  SetTimeWindow.h  StartDialogWindow.cpp  StartDialogWindow.h
Frontend/CompanySetSizeWindow/: CompanySetSizeWindow.cpp  CompanySetSizeWindow.h
Frontend/MainDispetcherWindow/: MainDIspetcherWindow.cpp  MainDIspetcherWindow.h  MainDispetcherWindow.cpp  MainDispetcherWindow.h
Frontend/OfficePriorityWindow/: OfficePriorityWindow.cpp  OfficePriorityWindow.h
Frontend/SetTimeWindow/: SetTimeWindow.cpp  SetTimeWindow.h
Generator/: Generator.cpp  Generator.h
Time/: Time.cpp  Time.h
service/: Service.cpp  Service.h
